[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/nodes/WorkZone.gd" type="Script" id=1]
[ext_resource path="res://src/nodes/RulesetView.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/nodes/TileMainView.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/nodes/InputTextureView.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/nodes/TemplateView.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/nodes/ResultView.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/TileRenderer.tscn" type="PackedScene" id=7]

[node name="WorkZone" type="ColorRect"]
margin_left = 292.0
margin_right = 1280.0
margin_bottom = 712.0
rect_min_size = Vector2( 360, 180 )
size_flags_vertical = 3
color = Color( 0.156863, 0.176471, 0.2, 1 )
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="." groups=["snapshottable"]]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VSplitContainer"]
margin_right = 988.0
margin_bottom = 468.0
rect_min_size = Vector2( 0, 420 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TileMainView" parent="VSplitContainer/Control" instance=ExtResource( 3 )]
visible = false

[node name="InputTextureView" parent="VSplitContainer/Control" instance=ExtResource( 4 )]
visible = false

[node name="TemplateView" parent="VSplitContainer/Control" instance=ExtResource( 5 )]
visible = false

[node name="RulesetView" parent="VSplitContainer/Control" instance=ExtResource( 2 )]
visible = false

[node name="ResultView" parent="VSplitContainer" instance=ExtResource( 6 )]
margin_top = 480.0
margin_right = 988.0
margin_bottom = 712.0

[node name="TileRenderer" parent="." instance=ExtResource( 7 )]

[connection signal="input_texture_view_called" from="VSplitContainer/Control/TileMainView" to="." method="_on_TileMainView_input_texture_view_called"]
[connection signal="ruleset_view_called" from="VSplitContainer/Control/TileMainView" to="." method="_on_TileMainView_ruleset_view_called"]
[connection signal="template_view_called" from="VSplitContainer/Control/TileMainView" to="." method="_on_TileMainView_template_view_called"]
[connection signal="tile_size_changed" from="VSplitContainer/Control/TileMainView" to="." method="_on_tile_size_changed"]
[connection signal="file_dialog_ended" from="VSplitContainer/Control/InputTextureView" to="." method="_on_InputTextureView_file_dialog_ended"]
[connection signal="file_dialog_started" from="VSplitContainer/Control/InputTextureView" to="." method="_on_InputTextureView_file_dialog_started"]
[connection signal="merge_level_changed" from="VSplitContainer/Control/InputTextureView" to="." method="_on_InputTextureView_merge_level_changed"]
[connection signal="overlap_level_changed" from="VSplitContainer/Control/InputTextureView" to="." method="_on_InputTextureView_overlap_level_changed"]
[connection signal="report_error" from="VSplitContainer/Control/InputTextureView" to="." method="_on_error_reported"]
[connection signal="tile_size_changed" from="VSplitContainer/Control/InputTextureView" to="." method="_on_tile_size_changed"]
[connection signal="tile_texture_changed" from="VSplitContainer/Control/InputTextureView" to="." method="_on_InputTextureView_tile_texture_changed"]
[connection signal="file_dialog_ended" from="VSplitContainer/Control/TemplateView" to="." method="_on_TemplateView_file_dialog_ended"]
[connection signal="file_dialog_started" from="VSplitContainer/Control/TemplateView" to="." method="_on_TemplateView_file_dialog_started"]
[connection signal="report_error" from="VSplitContainer/Control/TemplateView" to="." method="_on_error_reported"]
[connection signal="tile_template_changed" from="VSplitContainer/Control/TemplateView" to="." method="_on_TemplateView_tile_template_changed"]
[connection signal="file_dialog_ended" from="VSplitContainer/Control/RulesetView" to="." method="_on_RulesetView_file_dialog_ended"]
[connection signal="file_dialog_started" from="VSplitContainer/Control/RulesetView" to="." method="_on_RulesetView_file_dialog_started"]
[connection signal="report_error" from="VSplitContainer/Control/RulesetView" to="." method="_on_error_reported"]
[connection signal="tile_ruleset_changed" from="VSplitContainer/Control/RulesetView" to="." method="_on_RulesetView_tile_ruleset_changed"]
